fix: header and alignment

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -6,3 +6,6 @@
 .flourish-credit {
   display: none;
 }
+html {
+  scroll-padding-top: 4rem;
+}
